--- a/src/app/modules/profiledetails/profiledetails.component.html
+++ b/src/app/modules/profiledetails/profiledetails.component.html
@@ -15,7 +15,7 @@
       class="rrpublogoimg1"
     />
 
-    <img
+    <!-- <img
       *ngIf="User[0].role === 'author'"
       src="./assets/_x letter_.png"
       alt="Pubkin"
@@ -28,7 +28,7 @@
       alt="Pubkin"
       class="float-end mt-5"
       routerLink="/freelancers"
-    />
+    /> -->
   </div>
 
   <!--Update Congrats Page-->
@@ -176,8 +176,8 @@
           </div>
         </div>
         <div class="container mt-5 savebtnalign1">
-          <a class=" btn  savevv "  (click)="closeProfile();">Save</a>
-          <button type="submit" style="display:none" #firstButton>save</button>
+          <a class="btn savevv" (click)="closeProfile()">Save</a>
+          <button type="submit" style="display: none" #firstButton>save</button>
         </div>
       </form>
     </div>
@@ -250,10 +250,22 @@
       </div>
 
       <div class="container">
-        <button class="btn kkempbtn1" routerLink="/freelancers">Back</button>
-        <button class="btn kkempbtn2" routerLink="/profile/freelancing-details">
-          Save Details
-        </button>
+        <div class="row">
+          <div class="col-4">
+            <button class="btn kkempbtn1" routerLink="/freelancers">
+              Back
+            </button>
+          </div>
+          <div class="col-4"></div>
+          <div class="col-4">
+            <button
+              class="btn kkempbtn2"
+              routerLink="/profile/freelancing-details"
+            >
+              Save Details
+            </button>
+          </div>
+        </div>
       </div>
 
       <div
@@ -610,10 +622,17 @@
     </div>
 
     <div class="container">
-      <button class="btn kkempbtn1" routerLink="/freelancers">Back</button>
-      <button class="btn kkempbtn2" routerLink="/profile/education-details">
-        Save Details
-      </button>
+      <div class="row">
+        <div class="col-4">
+          <button class="btn kkempbtn1" routerLink="/freelancers">Back</button>
+        </div>
+        <div class="col-4"></div>
+        <div class="col-4">
+          <button class="btn kkempbtn2" routerLink="/profile/education-details">
+            Save Details
+          </button>
+        </div>
+      </div>
     </div>
 
     <div
@@ -815,12 +834,21 @@
     </div>
 
     <div class="container">
-      <button class="btn kkempbtn1" routerLink="/freelancers">Back</button>
-      <button class="btn kkempbtn2" routerLink="/profile/employment-history">
-        Save Details
-      </button>
+      <div class="row">
+        <div class="col-4">
+          <button class="btn kkempbtn1" routerLink="/freelancers">Back</button>
+        </div>
+        <div class="col-4"></div>
+        <div class="col-4">
+          <button
+            class="btn kkempbtn2"
+            routerLink="/profile/employment-history"
+          >
+            Save Details
+          </button>
+        </div>
+      </div>
     </div>
-
     <div
       class="modal fade"
       id="exampleModal"
@@ -1111,7 +1139,9 @@
     </form>
     <div *ngIf="GoNext === 'button1'">
       <div class="container">
-        <p class="kkemphus">Do you have experience in freelancing?</p>
+        <p class="kkemphus freelancingHead">
+          Do you have experience in freelancing?
+        </p>
         <p class="kkemphus1">
           All the information are confidential, we wont share with anyone
         </p>
@@ -1213,11 +1243,11 @@
           aria-valuemin="0"
           aria-valuemax="80"
         >
-          <div class="progress-bar pgrssbar" style="width: 50%"></div>
+          <div class="progress-bar pgrssbar" style="width: 25%"></div>
         </div>
         <div class="row">
           <div class="col-4">
-            <button class="btn kkempbtn1" (click)="GoNextBtn('button1')">
+            <button class="btn kkempbtn1" routerLink="/freelancers">
               Back
             </button>
           </div>
@@ -1230,7 +1260,7 @@
           <div class="col-2">
             <button
               class="btn kkempbtn2 kkempbtn3"
-              (click)="GoNextBtn('button3'); increseFreelancingPercentage()"
+              (click)="GoNextBtn('button2'); increseFreelancingPercentage()"
             >
               Next
             </button>
@@ -1243,7 +1273,7 @@
       <div class="container">
         <div class="row">
           <div class="col-8">
-            <p class="kkemphus">Tell us about yourself</p>
+            <p class="kkemphus freelancingHead">Tell us about yourself</p>
             <p class="kkemphus1">
               Add your skill, education and portfolio. Keep in mind potential
               employer will be able to see this
@@ -1290,22 +1320,29 @@
               Back
             </button>
           </div>
-          <button class="btn skipa" routerLink="/freelancers">
-            skip for now
-          </button>
-          <button
-            class="btn kkempbtn2 kkempbtn3"
-            (click)="GoNextBtn('button3'); increseFreelancingPercentage()"
-          >
-            Next
-          </button>
+          <div class="col-4"></div>
+          <div class="col-2">
+            <button class="btn skipa" routerLink="/freelancers">
+              skip for now
+            </button>
+          </div>
+          <div class="col-2">
+            <button
+              class="btn kkempbtn2 kkempbtn3"
+              (click)="GoNextBtn('button3'); increseFreelancingPercentage()"
+            >
+              Next
+            </button>
+          </div>
         </div>
       </div>
     </div>
 
     <div *ngIf="GoNext === 'button3'">
       <div class="container">
-        <p class="kkemphus">Add a Title. Short title on what you do</p>
+        <p class="kkemphus freelancingHead">
+          Add a Title. Short title on what you do
+        </p>
         <p class="kkemphus1">
           Potential clients or employer will see this first. Explain your skill
           in a standout way
@@ -1329,7 +1366,7 @@
 
       <div class="container pgressbackbutton">
         <div
-          class="progress pgrssa"
+          class="progress pgrss"
           role="progressbar"
           aria-label="Basic example"
           aria-valuenow="10"
@@ -1338,17 +1375,27 @@
         >
           <div class="progress-bar pgrssbar" style="width: 75%"></div>
         </div>
-        <button class="btn kkempbtn1" (click)="GoNextBtn('button2')">
-          Back
-        </button>
-        <button class="btn skip" routerLink="/freelancers">Skip for now</button>
-        <button
-          class="btn kkempbtn2 kkempbtn3"
-          routerLink="/profile/govtId-details"
-          (click)="profilesubmit()"
-        >
-          Next
-        </button>
+        <div class="row">
+          <div class="col-4">
+            <button class="btn kkempbtn1" (click)="GoNextBtn('button2')">
+              Back
+            </button>
+          </div>
+          <div class="col-4"></div>
+          <div class="col-2">
+            <button class="btn skipa" routerLink="/freelancers">
+              skip for now
+            </button>
+          </div>
+          <div class="col-2">
+            <button
+              class="btn kkempbtn2 kkempbtn3"
+              routerLink="/profile/govtId-details"
+            >
+              Next
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -1405,10 +1452,17 @@
     </div>
 
     <div class="container">
-      <button class="btn kkempbtn1" routerLink="/freelancers">Back</button>
-      <button class="btn kkempbtn2 rrextrawidthbtn1" routerLink="/freelancers">
-        Save Details
-      </button>
+      <div class="row">
+        <div class="col-4">
+          <button class="btn kkempbtn1" routerLink="/freelancers">Back</button>
+        </div>
+        <div class="col-4"></div>
+        <div class="col-4">
+          <button class="btn kkempbtn2" routerLink="/freelancers">
+            Save Details
+          </button>
+        </div>
+      </div>
     </div>
 
     <form #priceForm="ngForm" (ngSubmit)="onSubmitPrice(priceForm)">
@@ -1835,21 +1889,40 @@
         <div class="col-6">
           <div class="rrpubcomendalign1">
             <div class="govtupload">
-              <div class="rrpubcomcenalign1 d-flex justify-content-center">
-                <img
-                  class="govtimg"
-                  src="../assets/govt upload.png"
-                  alt="Govt Id"
-                />
-              </div>
-              <div class="rrpubcomcenalign1 d-flex justify-content-center">
-                <p class="uplohead">Upload or Drag your ID image</p>
-              </div>
-              <div class="rrpubcomcenalign1">
-                <p class="uplocont">
-                  Upload in png, jpeg and pdf files<br />Max size 1mb
-                </p>
-              </div>
+              <label class="w-100 d-flex justify-content-center" >
+                <input
+                #fileInput
+                type="file"
+                class="d-none"
+                id="attachfile"
+                name="attachfile"
+                (change)="onFileSelected($event)"
+                required
+              />
+                <div *ngIf="isFileUploaded"  class="d-flex justify-content-center align-items-center flex-column">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="60" width="60" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#a426d1" d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"/></svg>                  <br>
+               <br>
+                <span class="uplohead mt-1">{{ uploadedFileName }}</span>
+              </div>                
+                <div *ngIf="!uploadedFileName">
+                  <div class="rrpubcomcenalign1 d-flex justify-content-center">
+                    <img
+                      class="govtimg"
+                      src="../assets/govt upload.png"
+                      alt="Govt Id"
+                    />
+                  </div>
+
+                  <div class="rrpubcomcenalign1 d-flex justify-content-center">
+                    <p class="uplohead">Upload your ID image</p>
+                  </div>
+                  <div class="rrpubcomcenalign1">
+                    <p class="uplocont">
+                      Upload in png, jpeg and pdf files<br />Max size 1mb
+                    </p>
+                  </div>
+                </div>
+              </label>
             </div>
           </div>
         </div>
@@ -1857,15 +1930,22 @@
     </div>
 
     <div class="container">
-      <button class="btn kkempbtn1b" routerLink="/freelancers">Back</button>
-      <button
-        class="btn kkempbtn2b"
-        routerLink="/profile/payment"
-        type="submit"
-        (click)="govtsubmit(); PercentageSubmit()"
-      >
-        Save Details
-      </button>
+      <div class="row">
+        <div class="col-4">
+          <button class="btn kkempbtn1b" routerLink="/freelancers">Back</button>
+        </div>
+        <div class="col-4"></div>
+        <div class="col-4">
+          <button
+            class="btn kkempbtn2b"
+            routerLink="/profile/payment"
+            type="submit"
+            (click)="govtsubmit(); PercentageSubmit()"
+          >
+            Save Details
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 
