--- a/src/app/modules/signup/signup.component.html
+++ b/src/app/modules/signup/signup.component.html
@@ -131,7 +131,8 @@
           
 
             <div style="    width: 99%;margin-top: 18px;">
-                <mat-checkbox class="example-margin check123" name="myCheckbox" ngModel required></mat-checkbox>
+                <mat-checkbox class="example-margin check123" name="myCheckbox" ngModel required *ngIf="AgreeNow"></mat-checkbox>
+                <mat-checkbox class="d-none" name="myCheckbox"  ngModel required *ngIf="!AgreeNow"></mat-checkbox>
                 <span class="meme meme2">I have
                     read and accept pubkin’s</span> <span class="log log2" data-bs-toggle="modal"
                     data-bs-target="#myModal">User Agreement
@@ -323,6 +324,7 @@
 
     </div>
 </div>
+
 <div *ngIf="action === 'login'">
     <div *ngIf="GoNext === 'button1'">
         <div class="container mt-3">
@@ -540,15 +542,9 @@
                     Terms and Conditions. PubKin reserves the right to modify or terminate the Platform at any time
                     without
                     notice.</p>
-                    <button type="button" style="    width: 100px;
-                    height: 50px;" class="btn btnfr6" data-bs-dismiss="modal">Agree</button>
+                    <button (click)="Agree()" type="button" style="    width: 100px;
+                     height: 50px;" class="btn btnfr6" data-bs-dismiss="modal">Agree</button>
             </div>
-
-            <!-- Modal footer -->
-            <!-- <div class="modal-footer">
-               
-            </div> -->
-
         </div>
     </div>
 </div>
